--- a/CE-110_Lab_Revision_Notes_2.ipynb
+++ b/CE-110_Lab_Revision_Notes_2.ipynb
@@ -528,7 +528,7 @@
     "- A column label\n",
     "- values\n",
     "\n",
-    "We call the `.with_column()` function like so: `table_name..with_column(label, values)`."
+    "We call the `.with_column()` function like so: `table_name.with_column(label, values)`."
    ]
   },
   {
@@ -684,7 +684,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#actual 2010 data with total energy column\n",
