--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -49,11 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "# run this cell\n",
     "print(\"Hello World!\")"
@@ -143,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -614,10 +620,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ratings = Table.read_table(\"data/imdb_ratings.csv\")\n",
@@ -760,6 +764,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Selecting a specific column with `column` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The **`.column()`** function returns the values of a column as an array.:\n",
+    "- index or label\n",
+    "\n",
+    "We call the `column()` function like so: `table_name.column(index_or_label)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#return the values in a column\n",
+    "ratings.column(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Add a new column to a table with `with_column` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The **`.with_column()`** function returns a new table with an additional or replaced column.:\n",
+    "- A column label\n",
+    "- values\n",
+    "\n",
+    "We call the `.with_column()` function like so: `table_name.with_column(label, values)`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Filtering rows with `where`\n",
     "Some analysis questions only deal with a subset of rows.\n",
     "\n",
@@ -823,24 +874,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using `append`  to combine two tables."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By using the `append` method on a table, you can combine two tables.\n",
-    "For example, if you want to combine table1 and table2, you can use `table1.append(table2)` "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 3. Graph <a id='section 3'></a>\n",
     "\n",
     "We will learn how to create a bar graph from a table."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Making bar graphs\n",
+    "The **`.bar()`** function is used to plot bar charts for the table. \n",
+    "- column_for_categories (str): A column containing x-axis categories.\n",
+    "\n",
+    "Each plot is labeled using the values in column_for_categories and one plot is produced for every other column (or for the columns designated by select).\n",
+    "\n",
+    "Every selected column except column_for_categories must be numerical."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Type</th> <th>Values</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Weight1</td> <td>100   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Weight2</td> <td>120   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Weight3</td> <td>80    </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Type    | Values\n",
+       "Weight1 | 100\n",
+       "Weight2 | 120\n",
+       "Weight3 | 80"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create a new table\n",
+    "table = Table().with_columns('Type',make_array('Weight1','Weight2', 'Weight3'), \n",
+    "                             'Values', make_array(100, 120, 80))\n",
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAa8AAAEICAYAAADocntXAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAFjFJREFUeJzt3X2UZHV95/H3R3BGHbQBFURAMaaj\ngmZX12MUs4ZI1kcCJMEEsyqJuMaIhkjcFdRdQnaJxCeMOfERUVRQEPVgCMYHhKOooFF8AIk2BxFH\nEOTBlml0YPC7f9zbWjbdPT3TXV33Vr9f5/Spur97q+r7mzvVn/7d+tW9qSokSeqTu426AEmStpXh\nJUnqHcNLktQ7hpckqXcML0lS7+w46gKWa3p62umSkjTmJiYmMrjsyEuS1DuGlySpdwyvNWRqamrU\nJWgFuB/Hg/txeQwvSVLvGF6SpN4xvCRJvWN4SZJ6Z1XDK8mpSW5IctlA2+uS/EeSbyT5aJKdB9Yd\nl+TKJN9O8tTVrFWS1F2rPfJ6D/C0OW2fAh5ZVb8JfAc4DiDJvsDhwH7tY96SZIfVK1WS1FWrGl5V\n9Vng5jltn6yqLe3ixcBe7f1DgA9W1eaq+i5wJfC4VStWktRZXTs91POBM9v7e9KE2ayNbduC/N7E\n1o37v9Gmn97BDTf/ZNRlDN1VP7hp1CUM1W673oed7nn3UZcxdOP+flyuycnJBdd1JrySvArYApw+\n2zTPZouex3Cxjqp5o4z7v9HFl17BqWd/ZtRlDNXMzAwbNmwYdRlD9bIj/4BHj/n/1bXwfhymToRX\nkiOAg4ADq2o2oDYCew9sthdw7WrXJknqnpFPlU/yNOAVwMFVddvAqo8BhydZn+QhwCTwpVHUKEnq\nllUdeSX5AHAAcL8kG4HjaWYXrgc+lQTg4qp6UVVdnuQs4Fs0hxOPqqo7V7NeSVI3rWp4VdWz52l+\n1yLbnwicOLyKJEl9NPLDhpIkbSvDS5LUO4aXJKl3DC9JUu8YXpKk3jG8JEm9Y3hJknrH8JIk9Y7h\nJUnqHcNLktQ7hpckqXcML0lS7xhekqTeMbwkSb1jeEmSesfwkiT1juElSeodw0uS1DuGlySpdwwv\nSVLvGF6SpN4xvCRJvWN4SZJ6x/CSJPWO4SVJ6p1VDa8kpya5IcllA227JvlUkqn2dpe2PUnenOTK\nJN9I8pjVrFWS1F2rPfJ6D/C0OW3HAudX1SRwfrsM8HRgsv15IfDWVapRktRxqxpeVfVZ4OY5zYcA\np7X3TwMOHWh/bzUuBnZOssfqVCpJ6rIufOa1e1VdB9De7ta27wl8f2C7jW2bJGmN23HUBSwi87TV\nYg+Ympra7hfb9NM7uOHmn2z34/viqh/cNOoShuqOLT9nZmZm1GUM3bj3cXp6elnv575YC31cjsnJ\nyQXXdSG8rk+yR1Vd1x4WvKFt3wjsPbDdXsC1iz3RYh3dmosvvYJTz/7Mdj++D2ZmZtiwYcOoyxiq\nPz3kd8e+j2thP05MTCzr/dwHU1NTY9/HYerCYcOPAUe0948Azhlof1476/DxwPTs4UVJ0tq2qiOv\nJB8ADgDul2QjcDxwEnBWkiOBa4BntZufBzwDuBK4Dfjz1axVktRdqxpeVfXsBVYdOM+2BRw13Iok\nSX3UhcOGkiRtE8NLktQ7hpckqXcML0lS7xhekqTeMbwkSb1jeEmSesfwkiT1juElSeodw0uS1DuG\nlySpdwwvSVLvGF6SpN4xvCRJvWN4SZJ6x/CSJPWO4SVJ6h3DS5LUO4aXJKl3DC9JUu8YXpKk3jG8\nJEm9Y3hJknrH8JIk9Y7hJUnqHcNLktQ7nQmvJC9LcnmSy5J8IMk9kjwkySVJppKcmWTdqOuUJI1e\nJ8IryZ7AXwGPrapHAjsAhwP/AJxcVZPALcCRo6tSktQVnQiv1o7APZPsCNwLuA54MnB2u/404NAR\n1SZJ6pAdR10AQFX9IMnrgWuAnwKfBL4C/LiqtrSbbQT2XOx5pqamtruG6elpZmZmtvvxfTHufbx9\n8+ax7yOM/37ctGmGT1x48ajLGLqrfnDTqEsYmt12vQ873fPuy3qOycnJBdd1IryS7AIcAjwE+DHw\nIeDp82xaiz3PYh3dmps2bWHDhg3b/fg+mJmZGfs+rlu/fuz7uBb248zP7uCMcy4YdRlDNe778WVH\n/gGPXsbv5K3pymHD3wO+W1U/qqo7gI8A+wM7t4cRAfYCrh1VgZKk7uhKeF0DPD7JvZIEOBD4FnAB\ncFi7zRHAOSOqT5LUIZ0Ir6q6hGZixleBb9LU9Q7gFcAxSa4E7gu8a2RFSpI6oxOfeQFU1fHA8XOa\nrwIeN4JyJEkdtqSRV5KDkhwxsLx3ks8luSXJB5OM76eOkqTOWephw/8DPGBg+WTg14D30nw+NXfE\nJEnS0Cw1vB4KfB0gyT2BZwDHVNXRwCuBPxxOeZIk3dVSw+ueNF8eBngCsA74RLv8H8ADV7guSZIW\ntNTwuprme1cABwNfqaoft8v3B25d4bokSVrQUmcbngKclOQQ4L8ALxlY9wSa72RJkrQqlhReVfXG\nJDcBjwfeUVWnDqzeBXjPEGqTJGleS/6eV1WdRnNm97ntL1jRiiRJ2optOsNGkmckOSnJO5M8qG17\nYpIHbO2xkiStlCWNvJJMAP9KM2njNprZh2+lOSfhi4EbgaOHVKMkSb9iqSOv19F8Kfl3gJ2BDKz7\nFM0XlSVJWhVLDa9DgVdW1ee46zW1rgH2XtGqJElaxFLD6940VzKez3pgh5UpR5KkrVtqeH2H5oKR\n83kSzWVMJElaFUudKv9W4M1JbgHOaNvuneS5wEuBvxxGcZIkzWepX1J+W5JfB04E/r5t/gzN519v\nqKr3Dak+SZLuYlu+pPzyJG8BngLsBtwEfLKqpoZVnCRJ89mmKylX1VXA24ZUiyRJS7LULylv9ZIn\nVXXt8suRJGnrljry2shdv981l9PlJUmrYqnh9ULuGl73BZ4JPIhfTuKQJGnoljrb8JQFVr02yel4\nhg1J0iraprPKL+B9gJdFkSStmpUIr/vRnGVekqRVsdTZhvvP07wOeCTwKuCilSxKkqTFLHXCxkXc\ndcLG7GVRPs8KnB4qyc7AKTSBWMDzgW8DZwL7AFcDf1xVtyz3tSRJ/bbU8Ppv87T9DPheVS10tvlt\n9Y/Av1XVYUnWAfcCXgmcX1UnJTkWOBZ4xQq9niSpp5Y62/D8YRaR5D40Z6f/s/b1bgduT3IIcEC7\n2WnAhRhekrTmrcSEjZXwa8CPgHcnuTTJKUk2ALtX1XUA7e1uoyxSktQNC468kkyx9bNqzKqqetgy\n63gM8NKquiTJP9IcItwmU1Pbf47g6elpZmZmtvvxfTHufbx98+ax7yO4H8fFOPdxenp6Wb+TASYn\nJxdct9hhw0tYengt10ZgY1Vd0i6fTRNe1yfZo6quS7IHcMNiT7JYR7fmpk1b2LBhw3Y/vg9mZmbG\nvo/r1q8f+z66H8fDuO/HiYmJZf1O3poFw6uqnjO0V73ra/0wyfeTPKyqvg0cCHyr/TkCOKm9PWe1\napIkddc2XRJlyF4KnN7ONLwK+HOaz+TOSnIkcA3wrBHWJ0nqiG0KryT7AQ8D7jF3XVWdsZxCqupr\nwGPnWXXgcp5XkjR+lnqGjQngX4Anzja1t4OfiS0rvCRJWqqlTpU/EXgA8GSa4HoW8BSas19cBTx+\nKNVJkjSPpYbX02iu2TV7DsOrq+rTVfWnwAXAUcMoTpKk+Sw1vB4IXFlVd9KcFureA+s+BPz+Shcm\nSdJClhpe1wM7t/e/B/zWwLqH8svPwCRJGrptOav8bwHnAqcDJyR5ELCF5uzv/zqc8iRJuqulhtff\nAXu2918L3B/4E5qLUH4ceMnKlyZJ0vwWPGyY5NQkTwKoqqmqurC9f3tVHV1VD6iqiar646q6cZXq\nlSRp0c+8/gS4IMl3k5yQ5NdXqyhJkhazWHjtDryA5grGrwa+neSiJP+j/dKyJEkjsWB4VdWmqnp3\nVf0usA/wv4FdgbcD1yX5QJKnJ+nKNcEkSWvEkoKnqr5fVX9fVfvSnE3jVJpzDp4L/CDJ64dYoyRJ\nv2KbR01V9aWqegnN7MOTaa5u/LKVLkySpIVs8yVR2okbzwOeAzwYuJXmLBuSJK2KpZ5Vflea2YfP\nAx5Hczb5TwOvAj5aVT8bWoWSJM2xYHgluTtwEE1gPR1YR3Nl4+OA91fVtatSoSRJcyw28vohzfkM\nbwbeCZxWVf++KlVJkrSIxcLrc8BpwLlVdccq1SNJ0lYtGF5VdehqFiJJ0lL5BWNJUu8YXpKk3jG8\nJEm9Y3hJknrH8JIk9Y7hJUnqHcNLktQ7nQqvJDskuTTJue3yQ5JckmQqyZlJ1o26RknS6HUqvICj\ngSsGlv8BOLmqJoFbgCNHUpUkqVM6E15J9gKeCZzSLgd4MnB2u8lpgGf9kCRt+/W8huhNwP8C7t0u\n3xf4cVVtaZc30lwAc0FTU1Pb/eLT09PMzMxs9+P7Ytz7ePvmzWPfR3A/jotx7uP09PSyficDTE5O\nLriuE+GV5CDghqr6SpIDZpvn2bQWe57FOro1N23awoYNG7b78X0wMzMz9n1ct3792PfR/Tgexn0/\nTkxMLOt38tZ0IryAJwIHJ3kGcA/gPjQjsZ2T7NiOvvYCvIaYJKkbn3lV1XFVtVdV7QMcDnymqv47\ncAFwWLvZEcA5IypRktQhnQivRbwCOCbJlTSfgb1rxPVIkjqgK4cNf6GqLgQubO9fBTxulPVIkrqn\n6yMvSZLuwvCSJPWO4SVJ6h3DS5LUO4aXJKl3DC9JUu8YXpKk3jG8JEm9Y3hJknrH8JIk9Y7hJUnq\nHcNLktQ7hpckqXcML0lS7xhekqTeMbwkSb1jeEmSesfwkiT1juElSeodw0uS1DuGlySpdwwvSVLv\nGF6SpN4xvCRJvWN4SZJ6pxPhlWTvJBckuSLJ5UmObtt3TfKpJFPt7S6jrlWSNHqdCC9gC/A3VfUI\n4PHAUUn2BY4Fzq+qSeD8dlmStMZ1Iryq6rqq+mp7/1bgCmBP4BDgtHaz04BDR1OhJKlLOhFeg5Ls\nAzwauATYvaqugybggN1GV5kkqSt2HHUBg5LsBHwY+Ouq+kmSbXr81NTUdr/29PQ0MzMz2/34vhj3\nPt6+efPY9xHcj+NinPs4PT29rN/JAJOTkwuu60x4Jbk7TXCdXlUfaZuvT7JHVV2XZA/ghsWeY7GO\nbs1Nm7awYcOG7X58H8zMzIx9H9etXz/2fXQ/jodx348TExPL+p28NZ04bJhmiPUu4IqqeuPAqo8B\nR7T3jwDOWe3aJEnd05WR1xOB5wLfTPK1tu2VwEnAWUmOBK4BnjWi+iRJHdKJ8Kqqi4CFPuA6cDVr\nkSR1XycOG0qStC0ML0lS7xhekqTeMbwkSb1jeEmSesfwkiT1juElSeodw0uS1DuGlySpdwwvSVLv\nGF6SpN4xvCRJvWN4SZJ6x/CSJPWO4SVJ6h3DS5LUO4aXJKl3DC9JUu8YXpKk3jG8JEm9Y3hJknrH\n8JIk9Y7hJUnqHcNLktQ7hpckqXcML0lS7/QivJI8Lcm3k1yZ5NhR1yNJGq3Oh1eSHYB/Bp4O7As8\nO8m+o61KkjRKqapR17CoJE8A/raqntouHwdQVa8BmJ6e7nYHJEnLNjExkcHlzo+8gD2B7w8sb2zb\nJElrVB/CK/O0OdqSpDVsx1EXsAQbgb0HlvcCrp1dmDuUlCSNvz6MvL4MTCZ5SJJ1wOHAx0ZckyRp\nhDofXlW1BXgJ8AngCuCsqrp8tFUNX5KTk/z1wPInkpwysPyGJMcs8vgvLOE1rk5yv3naD0iy/8Dy\nk5J8NcmWJIdtW0/Wto7tx2OSfCvJN5Kcn+TB29abtatj+/FFSb6Z5GtJLlqrs687H14AVXVeVf1G\nVT20qk4cdT2r5AvA/gBJ7gbcD9hvYP3+wOcXenBV7b/QuiU4YPa1W9cAfwacsYznXKu6tB8vBR5b\nVb8JnA28dhnPvdZ0aT+eUVWPqqr/TLMP37iM5+6tXoTXGvV5fvkfdj/gMuDWJLskWQ88Arg0yf9M\n8uX2r+kTZh+cZFN7e7ckb0lyeZJzk5w3Z/T00nZU9c0kD0+yD/Ai4GXtX3b/taqurqpvAD8ffrfH\nTpf24wVVdVu7/cU0nx9rabq0H38ysP0G1ugEtj5M2FiTqura9jDdg2jeNF+k+YrAE4Bp4Bs0f5FN\nAo+jmZX5sSRPqqrPDjzVHwL7AI8CdqM59HrqwPobq+oxSV4MvLyqXpDkbcCmqnr9MPu4FnR4Px4J\nfHzlejreurYfkxwFHAOsA548hC53niOvbpv9a2/2zfLFgeUvAE9pfy4Fvgo8nObNM+i3gQ9V1c+r\n6ofABXPWf6S9/QrNm0orr1P7MclzgMcCr9u+7qxZndmPVfXPVfVQ4BXAq7e/S/3lyKvbZo+zP4rm\nMMX3gb8BfkLz19oBwGuq6u2LPMfWvkqwub29E/8/DEtn9mOS3wNeBfxOVW1eaDvNqzP7ccAHgbcu\nYbux48ir2z4PHATcXFV3VtXNwM40hyq+SDMD8/lJdgJIsmeS3eY8x0XAH7XH2neneYNtza3AvVeo\nD+rIfkzyaODtwMFVdcMy+7QWdWU/Do7mnglMbWd/es2/tLvtmzSzms6Y07ZTVd0IfDLJI4AvJgHY\nBDwHGPzF9GHgQJq/FL8DXEJzjH4x/wKcneQQ4KXAz4CPArsAv5/khKrab7En0K/oyn48HtgJ+FD7\nOtdU1cHL69qa0pX9eFg7gr4DuAU4Ypn96qXOn5hXy5dkp6ralOS+wJeAJ7bH29Uj7sfx4H5cGY68\n1oZzk+xMMzPp//pG6S3343hwP64AR16SpN5xwoYkqXcML0lS7xhekqTeccKGNGRJlvLB8veqap9h\n1yKNC8NLGr4nzFn+KPB14G8H2jzbhbQNDC9pyKrq4sHlJJtpTsB68QIPkbQVfuYldUSSVye5rf0O\n0GD7Dkk2Jnl3u/zwJJXkBUn+KcmNSWaSnJNk7zmPTZIXt5fY+FmSG5K8PcnEavZNWmmGl9Qd76Q5\nGvK8Oe0H0Vx+Y+4JX49v258HHE1z0tiPJ9lhYJuTgTcB5wEHA8cBh9B8Udb3v3rLw4ZSR1TV9Uk+\nAvwF8OaBVX8BfH2ew4w3An9U7ZkGknwX+DRwOHB6kt8A/go4tqp+cdXkJFe32z0F+LchdUcaKv/y\nkrrlLcC+SX4bIMmDgady11EXNNeF+sVMxqo6nybQZieIPJXmEhynJ9lx9gf4LM0EkScNrxvScBle\nUoe0V929jObS7wAvBG4D3j/P5tcv0LZne3/2chwbac5APvtzO7AeuO/KVC2tPg8bSt3zVuCNSV4O\nPB/4QFXdOs92uy/QdmF7/6b29gBgZp5tf7S8MqXRceQldc/7aEZHZwIPAN62wHaHpb1wFECSA2mu\nN/XFtumTQAF7VdW/z/PzveF1QRouR15Sx1TVrUneD/wl8OWq+uoCm94f+HCSU4A9gNcAl9NcGp6q\n+laSNwHvSPJI4HM0n3U9iGayxj9V1ReG2xtpOAwvqZs+RBNe803UmHUC8J+A9wL3oplBeFRV3Tm7\nQVUdk+Sy9rmOBu4ErgHOB747nNKl4fN6XlIHJXkDcCTwwKq6bc66hwNXAM+tqvkmckhjz5GX1CFJ\nHgM8gmak9Ka5wSWpYXhJ3XIecJ/29v+NuBapszxsKEnqHafKS5J6x/CSJPWO4SVJ6h3DS5LUO4aX\nJKl3DC9JUu/8f3gUuTXBlhQ0AAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1a1547c5c0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#graph a bar graph with type as a variable and values as y variable.\n",
+    "#parameter takes in the x-axis categories.\n",
+    "table.bar('Type')\n",
+    "\n",
+    "#ignore this\n",
+    "plt.xticks(np.arange(3),['Weight1', 'Weight2','Weight3'],rotation=0);\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "<b> EXERCISE:</b> Can you try your making your own bar graph? Fill in the blank.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#new table for the exercise\n",
+    "newtable = Table().with_columns('Types',make_array('Cat','Dog','Rabbit','Turtle','Bear'), \n",
+    "                             'Weight', make_array(20, 50, 15, 50, 100))\n",
+    "...\n",
+    "\n",
+    "#ignore this.\n",
+    "plt.xticks(np.arange(5),['Cat','Dog','Rabbit','Turtle','Bear'],rotation=0);\n",
+    "\n"
    ]
   },
   {
