--- a/CE-110_Lab_Keiko.ipynb
+++ b/CE-110_Lab_Keiko.ipynb
@@ -37,9 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from datascience import *\n",
@@ -67,10 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "data2010 = pd.read_csv('network2010.csv')\n",
@@ -87,10 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "utilities = [utility for utility in data2010['target'].unique() if \"E\" == utility[-1]]"
@@ -98,10 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "util_data = data[data['target'].isin(utilities)]\n",
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +114,13 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
+      "C:\\Users\\keiko\\Anaconda3\\envs\\discovery\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  after removing the cwd from sys.path.\n"
      ]
     }
    ],
@@ -131,6 +129,15 @@
     "actual_data = util_data[(util_data['data_year'] == 2015) | (util_data['year'] == 2010)]\n",
     "predicted['year'] = np.repeat(\"Predicted 2015\", len(predicted))\n",
     "actual_data['year'] = actual_data['year'].apply(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "util_data.loc[:, ['year', 'source', 'target', 'cumulative_volume_af', 'transmission_kwh/af']].to_csv('original.csv', index = False)"
    ]
   },
   {
@@ -2306,7 +2313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
