--- a/network/Introduction.ipynb
+++ b/network/Introduction.ipynb
@@ -1542,6 +1542,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`.group()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Barplots <a id='section 3'></a>\n",
     "\n",
     "It's difficult to understand trends in data without visual aid. In this section, we'll use made up data and plot bar plots of that data."
